src/test/deca/context/valid/LE/MethDuneMeth.deca
// Historique:
//    cree le 19/01/2022
// Remarque : il est obligatoire de mettre des this. pour acceder aux variables depuis une methode

class C1 {
    int a ;

    int fct () {
        this.a = 5 ;
        return 5 ;
    }
}

class C2 {
    protected C1 variable = new C1() ;

    C1 getVariable () {
        return this.variable ;
    }
}



{
    C2 var = new C2() ;

    int b = var.getVariable().fct() ;

    if (b == 5) {
        println("bon resultat") ;
    }
    else {
        println("mauvais resultat") ;
    }
}

